--- a/public/templates/add/add_modal.html
+++ b/public/templates/add/add_modal.html
@@ -81,6 +81,14 @@
 				</div>
 			</div>
 
+			<div class="widget_entry" onclick="addWidget('keyboardController','')" data-topic="geometry_msgs/Twist">
+				<img src="assets/joystick.svg" alt="Teleop" class="card_icon">
+				<div class="card">
+					<b class="card_title">Keyboard controller (no ui)</b>
+					<p class="card_desc">geometry_msgs/Twist</p>
+				</div>
+			</div>
+
 			<div class="widget_entry" onclick="addWidget('initialpose','')" data-topic="geometry_msgs/PoseWithCovarianceStamped">
 				<img src="assets/initialpose.svg" alt="Initialpose" class="card_icon">
 				<div class="card">
