--- a/public/templates/keyboardController/keyboardController_modal.html
+++ b/public/templates/keyboardController/keyboardController_modal.html
@@ -1,7 +1,7 @@
 <div id="{uniqueID}_modal" class="modal_outer noselect">
 
 	<div id="{uniqueID}__keyboardControlPreview" style="position: fixed; bottom: calc( 15vh - 50px ); left: calc( 50vw - 50px )" class="noselect">
-		<img  src="assets/keycaps_icon.svg" alt="Keyboard Preview" width="100" height="100">
+		<img  src="assets/keycaps_icon.png" alt="Keyboard Preview" width="100" height="100">
 	</div> 
 
 	<div class="modal_inner noselect">
